syntax = "proto3";

option csharp_namespace = "TransflowConsumer.Shared.Protobuffs";

import "google/protobuf/wrappers.proto";
import "Protobuffs/common.proto";
import "Protobuffs/simulation.proto";

package vehicle;


service Vehicles {
	rpc GetVehicles (simulation.SimulationId) returns (VehicleList);
	rpc GetVehicleTypes (simulation.SimulationId) returns (VehicleTypeList);

	rpc GetVehicleDataFull (SingleEntity) returns (VehicleDataRange);
	rpc GetVehicleDataPoint (SingleEntityDataPoint) returns (VehicleDataPoint);
	rpc GetVehicleDataRange (SingleEntityDataRange) returns (VehicleDataRange);

	rpc GetVehicleTypeData (SingleEntity) returns (VehicleTypeDataPoint);
}


// ----------------- requests -----------------
message SingleEntity {
	simulation.SimulationId simulation_id = 1;
	string entity_id = 2;
}

message SingleEntityDataPoint {
	simulation.SimulationId simulation_id = 1;
	string entity_id = 2;
	int64 time_step = 3;
}

message SingleEntityDataRange {
	simulation.SimulationId simulation_id = 1;
	string entity_id = 2;
	int64 from = 3;
	int64 to = 4;
}


// ------------------ replies ------------------
message VehicleKey {
	string id = 1;
	string vehicle_type_id = 2;
}

message VehicleTypeKey {
	string id = 1;
}

message VehicleTypeList {
	repeated VehicleTypeKey vehicle_types = 1;
}

message VehicleList {
	repeated VehicleKey vehicles = 1;
}

message VehicleDataPoint {
	optional VehicleData data = 1;
}

message VehicleData {
	int64 time_step = 1;
	google.protobuf.DoubleValue speed = 2;
	google.protobuf.DoubleValue acceleration = 3;
	common.PositionData position = 4;
	google.protobuf.DoubleValue fuel_consumption = 5;
}

message VehicleDataRange {
		repeated VehicleData points = 1;
}

message VehicleTypeDataPoint {
	optional VehicleTypeData data = 1;
}

message VehicleTypeData {
	google.protobuf.DoubleValue length = 1;
	google.protobuf.DoubleValue width = 2;
	google.protobuf.DoubleValue height = 3;
	google.protobuf.DoubleValue max_speed = 4;
	google.protobuf.DoubleValue max_acceleration = 5;
	google.protobuf.DoubleValue max_deceleration = 6;
	google.protobuf.Int32Value seats = 7;
}